# AIFIRA2023_Simulation

./: AIFIRA2023Sim.cc  CMakeLists.txt  README.md
Resultats/: .fuse_hidden0002093c0000000f  Reconstruction_Traj_Lentille.cc  Reconstruction_Traj_Lentille.hh
Resultats/Analyse/: #MCP_gui.py#  MCP_gui.py
Resultats/Analyse/Data/: Analyse.cc  Analyse.hh  Analyse_bis.cc  Plot_Degradation.cc  Remplacer.sh  Remplacer.sh~
include/: AIFIRA2023SimEventAction.hh  AIFIRA2023SimGeometry.hh  AIFIRA2023SimMaterials.hh  AIFIRA2023SimPhysics.hh  AIFIRA2023SimPrimaryGeneratorAction.hh  AIFIRA2023SimRunAction.hh  AIFIRA2023SimSteppingAction.hh  AIFIRA2023SimTrackInformation.hh  AIFIRA2023SimTrackingAction.hh  AIFIRA2023SimVisManager.hh  Geometry.hh
src/: AIFIRA2023SimEventAction.cc  AIFIRA2023SimGeometry.cc  AIFIRA2023SimGeometry_HPD.cc  AIFIRA2023SimGeometry_PMT.cc  AIFIRA2023SimGeometry_SNlike.cc  AIFIRA2023SimGeometry_backup_parametrisation.cc  AIFIRA2023SimMaterials.cc  AIFIRA2023SimPhysics.cc  AIFIRA2023SimPrimaryGeneratorAction.cc  AIFIRA2023SimRunAction.cc  AIFIRA2023SimSteppingAction.cc  AIFIRA2023SimTrackInformation.cc  AIFIRA2023SimTrackingAction.cc  AIFIRA2023SimVisManager.cc  FastSimModelOpFiber.cc  Geometry.cc  PETALSimGeometry.cc
